# file-hub

./: .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  Makefile  README.md  deny.toml  file-hub.example.yaml  index.html  package.json  vite.config.js
.github/workflows/: ci.yml
docs/: index.md  runtime.md
docs/adr/: 0001-vite-legacy-over-bun-bundler.md  0002-stateless-fs-over-actor.md  0003-staging-reserved-directory.md  0004-admin-bootstrap-password.md  0005-upload-transaction-module.md
docs/agents/: domain.md  issue-tracker.md
frontend/: App.spec.js  App.vue  ConsoleView.spec.js  ConsoleView.vue  LegacyCompatibility.spec.js
frontend-dist/: index.html
frontend-dist/assets/: index-BZnrDl-r.css  index-CD5NFe1E.js  index-Cp1Ty595.css  index-DlnzyNdn.js  index-b53Icvb2.js  index-legacy-CbCN-AON.js  index-legacy-CnbS2JxN.js  index-legacy-DP5a47ZW.js  polyfills-legacy-Dg_1jfzb.js  polyfills-legacy-YBc-QSmX.js
specs/: file-service-design.md  file-service-prd.md  index.md  resource-address-design.md
src/: auth.rs  config.rs  http.rs  lib.rs  main.rs  resource.rs  resource_address.rs  upload.rs
tests/: delete_write_action.rs  directory_upload.rs  rename_write_action.rs  root_directory_browsing.rs  runtime_limits.rs  session_identity.rs  upload_create_directory.rs
