[package]
name = "file-hub"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
axum = { version = "0.8.9", features = ["http1", "json", "tokio"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
chrono-tz = "0.10.4"
config = { version = "0.15.23", default-features = false, features = ["yaml"] }
getrandom = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.52", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.7.0", features = ["timeout"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
validator = { version = "0.20.0", default-features = false }
zip = { version = "8.6.0", default-features = false }

[dev-dependencies]
filetime = "0.2.29"
http-body-util = "0.1.3"
tempfile = "3.27.0"
tower = { version = "0.5.2", features = ["util"] }
